apps/stirling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling
  namespace: stirling
spec:
  selector:
    app: stirling
  ports:
    - port: 8080
      targetPort: 8080
