apps/stirling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-http-vpn-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: stirling.czubinski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling
                port:
                  number: 8080
